// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post activity failed: pending to send: activity 1`] = `
Array [
  Object {
    "channelData": Object {
      "clientActivityID": "4feornb",
    },
    "from": Object {
      "id": "default-user",
      "name": "John Doe",
    },
    "text": "Hello, World!",
    "timestamp": "2000-01-01T00:00:01.000Z",
    "type": "message",
  },
]
`;

exports[`Post activity failed: pending to send: store 1`] = `
Array [
  Object {
    "channelData": Object {
      "clientActivityID": "4feornb",
      "state": "sending",
    },
    "from": Object {
      "id": "default-user",
      "name": "John Doe",
    },
    "text": "Hello, World!",
    "timestamp": "2000-01-01T00:00:01.000Z",
    "type": "message",
  },
]
`;

exports[`Post activity failed: send failed: actions 1`] = `
Array [
  Object {
    "payload": Object {
      "activity": Object {
        "text": "Hello, World!",
        "type": "message",
      },
    },
    "type": "DIRECT_LINE/POST_ACTIVITY",
  },
  Object {
    "meta": Object {
      "clientActivityID": "4feornb",
    },
    "type": "DIRECT_LINE/POST_ACTIVITY_PENDING",
  },
  Object {
    "payload": Object {
      "activity": Object {
        "channelData": Object {
          "clientActivityID": "4feornb",
          "state": "sending",
        },
        "from": Object {
          "id": "default-user",
          "name": "John Doe",
        },
        "text": "Hello, World!",
        "timestamp": "2000-01-01T00:00:01.000Z",
        "type": "message",
      },
    },
    "type": "DIRECT_LINE/INCOMING_ACTIVITY",
  },
  Object {
    "error": true,
    "meta": Object {
      "clientActivityID": "4feornb",
    },
    "payload": "some error",
    "type": "DIRECT_LINE/POST_ACTIVITY_REJECTED",
  },
]
`;

exports[`Post activity failed: send failed: store 1`] = `
Array [
  Object {
    "channelData": Object {
      "clientActivityID": "4feornb",
      "state": "send failed",
    },
    "from": Object {
      "id": "default-user",
      "name": "John Doe",
    },
    "text": "Hello, World!",
    "timestamp": "2000-01-01T00:00:01.000Z",
    "type": "message",
  },
]
`;
